Adjusted the pool size and added error handling

--- a/student_resource 3/src/test.ipynb
+++ b/student_resource 3/src/test.ipynb
@@ -29,6 +29,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "8afc3640",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATASET_FOLDER = '../dataset/'\n",
+    "train = pd.read_csv(os.path.join(DATASET_FOLDER, 'train.csv'))\n",
+    "test = pd.read_csv(os.path.join(DATASET_FOLDER, 'test.csv'))\n",
+    "sample_test = pd.read_csv(os.path.join(DATASET_FOLDER, 'sample_test.csv'))\n",
+    "sample_test_out = pd.read_csv(os.path.join(DATASET_FOLDER, 'sample_test_out.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "d3136aac",
    "metadata": {},
